chore(css-variables): iss 744/viv 434 remove obsolete variables (#745)
* issue #744: removing the obsolete ones

* issue #744: wip;

* issue #744: wip

* issue #744: wip

* issue #744: tests fixed and file picker one added

* issue #744: button fixed and tests added

* issue #744: fixed icon button and tested

* issue #744: fixed list item and manually verified

* issue #744: selected fixed and manually verified

* issue #744: fixed textfield, manually verified

* issue #744: fixing the dependencies

* fixing CR comments

* issue #744: fixing CR remarks

* issue #744: reflecting CR remarks

* issue #744: reflecting CR remarks

* API - forward connotation variables

Co-authored-by: yinonov <yinon@hotmail.com>

--- a/common/foundation/scss/mixins/color-connotation/_index.scss
+++ b/common/foundation/scss/mixins/color-connotation/_index.scss
@@ -19,3 +19,5 @@ $connotations-decorative-set: predefined-connotations.$connotations-decorative-s
 	$connotations-decorative-set: $connotations-decorative-set,
 	$selector: $selector
 );
+
+@forward 'variables' show $vvd-color-connotation, $vvd-color-on-connotation;
