--- a/components/list/src/vwc-list-item.scss
+++ b/components/list/src/vwc-list-item.scss
@@ -1,6 +1,6 @@
 @use '@vonage/vvd-typography/scss/typography' as typography;
-@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
+@use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with (
 	$variable-name: --vvd-list-item-shape
 );
@@ -20,7 +20,10 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 	--mdc-theme-text-hint-on-background: var(
 		#{scheme-variables.$vvd-color-on-base}
 	);
+
 	@include typography.typography-cat-shorthand('body-2');
+	@include vvd-formfield.coupling;
+
 	height: var(#{$vvd-list-item-block-size});
 
 	border-radius: var(--vvd-list-item-shape);
@@ -85,15 +88,11 @@ $vvd-list-item-graphic-margin: --vvd-list-item-graphic-margin;
 }
 
 :host([disabled]) {
-	--mdc-theme-text-icon-on-background: var(
-		#{color-semantic.$formfield-disabled-ink}
-	);
-	--mdc-theme-text-hint-on-background: var(
-		#{color-semantic.$formfield-disabled-ink}
-	);
+	--mdc-theme-text-icon-on-background: var(#{vvd-formfield.$formfield-disabled-ink});
+	--mdc-theme-text-hint-on-background: var(#{vvd-formfield.$formfield-disabled-ink});
 
 	.mdc-list-item__text {
-		color: var(#{color-semantic.$formfield-disabled-ink});
+		color: var(#{vvd-formfield.$formfield-disabled-ink});
 	}
 }
 
