--- a/common/foundation/scss/mixins/_layout-mixins.scss
+++ b/common/foundation/scss/mixins/_layout-mixins.scss
@@ -1,6 +1,6 @@
-@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '../variable-names/color-semantic-variable-names' as color-semantic;
-@use '../functions';
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
+@use './color-connotation' as color-connotation;
+@use '../functions' as functions;
 
 // override to apply relevance
 $layouts: filled outlined soft text ghost !default;
@@ -18,18 +18,18 @@ $all-layouts: (
 );
 
 %filled {
-	#{$_prefix}background-color: var(#{color-semantic.$vvd-color-connotation});
-	#{$_prefix}color: var(#{color-semantic.$vvd-color-on-connotation});
+	#{$_prefix}background-color: var(#{color-connotation.$vvd-color-connotation});
+	#{$_prefix}color: var(#{color-connotation.$vvd-color-on-connotation});
 }
 
 %outlined {
 	#{$_prefix}background-color: transparent;
-	#{$_prefix}border: 1px solid var(#{color-semantic.$vvd-color-connotation});
-	#{$_prefix}color: var(#{color-semantic.$vvd-color-connotation});
+	#{$_prefix}border: 1px solid var(#{color-connotation.$vvd-color-connotation});
+	#{$_prefix}color: var(#{color-connotation.$vvd-color-connotation});
 }
 
 %soft {
-	#{$_prefix}background-color: var(#{color-semantic.$vvd-color-connotation}-soft);
+	#{$_prefix}background-color: var(#{color-connotation.$vvd-color-connotation}-soft);
 	#{$_prefix}color: var(#{scheme-variables.$vvd-color-on-base});
 }
 
