--- a/components/file-picker/src/vwc-file-picker.scss
+++ b/components/file-picker/src/vwc-file-picker.scss
@@ -1,8 +1,10 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
-@use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
+@use '@vonage/vvd-style-coupling/scss/vvd-formfield' as vvd-formfield;
 @use '@vonage/vvd-typography/scss/typography' as typography;
 
 :host {
+	@include vvd-formfield.coupling;
+
 	display: inline-block;
 	max-inline-size: 100%;
 	min-inline-size: 320px;
@@ -69,7 +71,7 @@
 
 	&.drag-invalid {
 		.content {
-			background-color: var(#{color-semantic.$formfield-error-fill});
+			background-color: var(#{vvd-formfield.$formfield-error-fill});
 		}
 	}
 }
