--- a/components/pagination/src/vwc-pagination.scss
+++ b/components/pagination/src/vwc-pagination.scss
@@ -1,3 +1,7 @@
+@use '@vonage/vvd-typography/scss/typography';
+
 :host {
+	@include typography.typography-cat-shorthand('caption');
+
 	display: flex;
 }
