--- a/components/toggle-buttons-group/src/vwc-toggle-buttons-group.scss
+++ b/components/toggle-buttons-group/src/vwc-toggle-buttons-group.scss
@@ -1,5 +1,41 @@
-@use '@vonage/vvd-foundation/scss/variable-names/color-semantic-variable-names' as color-semantic;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation/color-connotation-main.mixin' as color-connotation-mixins;
-:host {
+@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with(
+$variable-name: --vvd-button-toggle-shape
+);
+@use '@vonage/vvd-foundation/scss/mixins/color-connotation' with (
+	$connotations-set: primary
+);
 
+@include shape-mixins.shape(
+	$shapes: (
+		rounded: 6px,
+		pill: 24px,
+	)
+);
+
+@include color-connotation.connotations-shades;
+
+:host {
+	display: flex;
+
+}
+
+::slotted(vwc-button){
+	#{color-connotation.$vvd-color-connotation}: #{color-connotation.$vvd-color-connotation}-soft;
+	--vvd-color-on-connotation: black;
+}
+::slotted(vwc-button[selected]) {
+	--vvd-color-connotation: blue;
+	--vvd-color-on-connotation: white;
+}
+
+::slotted(vwc-button:not(:first-child):not(:last-child)) {
+	--vvd-button-shape: 0;
+}
+
+::slotted(vwc-button:first-child) {
+	--vvd-button-shape: var(--vvd-button-toggle-shape) 0 0 var(--vvd-button-toggle-shape);
+}
+
+::slotted(vwc-button:last-child) {
+	--vvd-button-shape: 0 var(--vvd-button-toggle-shape) var(--vvd-button-toggle-shape) 0;
 }
