--- a/common/foundation/scss/mixins/color-connotation/_variables.scss
+++ b/common/foundation/scss/mixins/color-connotation/_variables.scss
@@ -5,3 +5,6 @@ $selector: ':host(#{$compound-placeholder})' !default;
 
 $vvd-color-connotation: --vvd-color-connotation;
 $vvd-color-on-connotation: --vvd-color-on-connotation;
+
+$vvd-color-connotation-soft: --vvd-color-connotation-soft;
+$vvd-color-connotation-underemphasis: --vvd-color-connotation-underemphasis;
