--- a/common/scheme/src/_scheme-mixins.scss
+++ b/common/scheme/src/_scheme-mixins.scss
@@ -1,3 +1,5 @@
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
+
 $scheme-main: vvd-scheme-main;
 $scheme-alternate: vvd-scheme-alternate;
 
