--- a/components/toggle-button-group/src/vwc-toggle-button-group.scss
+++ b/components/toggle-button-group/src/vwc-toggle-button-group.scss
@@ -31,13 +31,14 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 }
 
 ::slotted([group-button]) {
-	--mdc-theme-primary: var(#{color-connotation.$vvd-color-connotation-soft});
 	//! TODO: remove next line on viv-485 resolve
+	--mdc-theme-primary: var(#{color-connotation.$vvd-color-connotation-soft});
 	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-base});
 	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-base});
+	--mdc-ripple-focus-opacity: 0;
 }
 
-::slotted(:is(#{$toggle-buttons-type-selectors})[selected]) {
+::slotted([group-button][selected]) {
 	//! TODO: remove next line on viv-485 resolve
 	--mdc-theme-primary: var(#{color-connotation.$vvd-color-connotation-underemphasis});
 }
