fix(textfield): value is not vertically centered when hint is not defined

--- a/components/textfield/src/vwc-textfield-input.scss
+++ b/components/textfield/src/vwc-textfield-input.scss
@@ -50,4 +50,10 @@
 	::slotted(#{textfield-variables.$vvd-input-selector}:placeholder-shown:not(:focus)) {
 		opacity: 0;
 	}
+
+	.mdc-text-field--no-label {
+		::slotted(#{textfield-variables.$vvd-input-selector}) {
+			padding-bottom: 16px;
+		}
+	}
 }
