issue #768: fixing textfield trailing icon dark mode

--- a/components/textfield/src/vwc-textfield.scss
+++ b/components/textfield/src/vwc-textfield.scss
@@ -156,7 +156,8 @@
 	}
 
 	&:not(.mdc-text-field--disabled) {
-		.mdc-text-field__icon--leading {
+		.mdc-text-field__icon--leading,
+		.mdc-text-field__icon--trailing {
 			color: var(--mdc-text-field-label-ink-color);
 		}
 	}
