--- a/components/carousel/src/vwc-carousel.scss
+++ b/components/carousel/src/vwc-carousel.scss
@@ -1,4 +1,5 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
+@forward 'swiper/swiper-bundle.min.css';
 
 vwc-carousel {
 	display: inline-flex;
@@ -46,21 +47,21 @@ vwc-casousel:active {
 /* stylelint-disable-next-line scss/dollar-variable-pattern -- (used in swiper lib) */
 $themeColor: var(#{scheme-variables.$vvd-color-on-base}) !default;
 
-@import 'swiper/scss/functions';
-@import 'swiper/components/core/core';
+// @import 'swiper/scss/functions';
+// @import 'swiper/components/core/core';
 
-//IMPORT_COMPONENTS
-@import 'swiper/components/a11y/a11y';
-@import 'swiper/components/controller/controller';
-@import 'swiper/components/effect-coverflow/effect-coverflow';
-@import 'swiper/components/effect-cube/effect-cube';
-@import 'swiper/components/effect-fade/effect-fade';
-@import 'swiper/components/effect-flip/effect-flip';
-@import 'swiper/components/lazy/lazy';
-@import 'swiper/components/scrollbar/scrollbar';
-@import 'swiper/components/thumbs/thumbs';
-@import 'swiper/components/zoom/zoom';
+// //IMPORT_COMPONENTS
+// @import 'swiper/components/a11y/a11y';
+// @import 'swiper/components/controller/controller';
+// @import 'swiper/components/effect-coverflow/effect-coverflow';
+// @import 'swiper/components/effect-cube/effect-cube';
+// @import 'swiper/components/effect-fade/effect-fade';
+// @import 'swiper/components/effect-flip/effect-flip';
+// @import 'swiper/components/lazy/lazy';
+// @import 'swiper/components/scrollbar/scrollbar';
+// @import 'swiper/components/thumbs/thumbs';
+// @import 'swiper/components/zoom/zoom';
 
-//IMPORT NAVIGATION/PAGINATION
-@import './vwc-carousel-navigation';
-@import './vwc-carousel-pagination';
+// //IMPORT NAVIGATION/PAGINATION
+// @import './vwc-carousel-navigation';
+// @import './vwc-carousel-pagination';
