--- a/components/carousel/src/vwc-carousel.scss
+++ b/components/carousel/src/vwc-carousel.scss
@@ -1,5 +1,30 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@forward 'swiper/swiper-bundle.min.css';
+
+/* stylelint-disable-next-line scss/dollar-variable-pattern -- (used in swiper lib) */
+// $themeColor: var(#{scheme-variables.$vvd-color-on-base}) !default;
+
+@forward 'swiper/swiper';
+//IMPORT_COMPONENTS
+@forward 'swiper/components/a11y/a11y';
+@forward 'swiper/components/controller/controller';
+@forward 'swiper/components/effect-coverflow/effect-coverflow';
+@forward 'swiper/components/effect-cube/effect-cube';
+@forward 'swiper/components/effect-fade/effect-fade';
+@forward 'swiper/components/effect-flip/effect-flip';
+@forward 'swiper/components/lazy/lazy';
+// @forward 'swiper/components/navigation/navigation' hide $themeColor, $colors;
+// @forward 'swiper/components/pagination/pagination' hide $themeColor, $colors;
+@forward 'swiper/components/scrollbar/scrollbar';
+@forward 'swiper/components/thumbs/thumbs';
+@forward 'swiper/components/zoom/zoom';
+
+@forward 'vwc-carousel-navigation';
+@forward 'vwc-carousel-pagination';
+
+:root {
+	--swiper-theme-color: var(#{scheme-variables.$vvd-color-on-base});
+	--swiper-navigation-size: 144px;
+}
 
 vwc-carousel {
 	display: inline-flex;
@@ -43,25 +68,3 @@ vwc-casousel:active {
 	overflow: hidden;
 	contain: strict;
 }
-
-/* stylelint-disable-next-line scss/dollar-variable-pattern -- (used in swiper lib) */
-$themeColor: var(#{scheme-variables.$vvd-color-on-base}) !default;
-
-// @import 'swiper/scss/functions';
-// @import 'swiper/components/core/core';
-
-// //IMPORT_COMPONENTS
-// @import 'swiper/components/a11y/a11y';
-// @import 'swiper/components/controller/controller';
-// @import 'swiper/components/effect-coverflow/effect-coverflow';
-// @import 'swiper/components/effect-cube/effect-cube';
-// @import 'swiper/components/effect-fade/effect-fade';
-// @import 'swiper/components/effect-flip/effect-flip';
-// @import 'swiper/components/lazy/lazy';
-// @import 'swiper/components/scrollbar/scrollbar';
-// @import 'swiper/components/thumbs/thumbs';
-// @import 'swiper/components/zoom/zoom';
-
-// //IMPORT NAVIGATION/PAGINATION
-// @import './vwc-carousel-navigation';
-// @import './vwc-carousel-pagination';
