--- a/components/textfield/src/vwc-textfield-input.scss
+++ b/components/textfield/src/vwc-textfield-input.scss
@@ -53,7 +53,9 @@
 
 	.mdc-text-field--no-label {
 		::slotted(#{textfield-variables.$vvd-input-selector}) {
-			padding-bottom: 16px;
+			padding-bottom: calc(
+				var(#{textfield-variables.$vvd-text-field-size-block}) / 3
+			);
 		}
 	}
 }
