add dense and left support

--- a/components/tab-bar/src/vwc-tab-bar.scss
+++ b/components/tab-bar/src/vwc-tab-bar.scss
@@ -1,5 +1,6 @@
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
 
 :host {
+	display: flex;
 	border-bottom: 1px solid var(#{scheme-variables.$vvd-color-neutral-30});
 }
