--- a/components/tab-bar/src/vwc-tab.scss
+++ b/components/tab-bar/src/vwc-tab.scss
@@ -5,10 +5,19 @@
 	--mdc-tab-height: 44px;
 	--mdc-tab-horizontal-padding: 24px;
 	--mdc-tab-text-label-color-default: var(#{scheme-variables.$vvd-color-neutral-70});
+	flex: 1;
+}
+
+:host([dense]) {
+	--mdc-tab-horizontal-padding: 12px;
+}
+
+:host([left]) {
 	flex: initial;
 }
 
 .mdc-tab {
+	min-width: auto;
 	font-stretch: var(--mdc-typography-subtitle1-font-stretch); // ! this was supposed to be set by MDC
 }
 
