--- a/components/toggle-button-group/src/vwc-toggle-button-group.scss
+++ b/components/toggle-button-group/src/vwc-toggle-button-group.scss
@@ -5,8 +5,8 @@ $vvd-toggle-button-group-shape: --vvd-toggle-button-group-shape;
 $scopes: button icon-button;
 $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $separator: comma));
 
-@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables';
-@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' with(
+@use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
+@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with(
 	$variable-name: #{$vvd-toggle-button-group-shape}
 );
 @use '@vonage/vvd-foundation/scss/mixins/color-connotation/variables' as connotation-variables;
@@ -15,7 +15,6 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 	$selector: '::slotted(:is(#{$toggle-buttons-type-selectors})#{connotation-variables.$compound-placeholder})'
 );
 
-// TODO: support all shapes as property with annotated type
 @include shape-mixins.shape(
 	$shapes: (
 		rounded: 6px,
@@ -31,7 +30,6 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 }
 
 ::slotted([group-button]) {
-	//! TODO: remove next line on viv-485 resolve
 	--mdc-theme-primary: var(#{color-connotation.$vvd-color-connotation-soft});
 	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-base});
 	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-base});
@@ -50,8 +48,6 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 		--vvd-#{$scope}-shape: var(#{$vvd-toggle-button-group-shape});
 	}
 
-	//! @YonatanKra note: replacing selected with wai-aria-attribute will enforce
-	//! consumer to comply and might override consumer's different preference for such attribute
 	::slotted(vwc-#{$scope}[selected]) {
 		--vvd-#{$scope}-background-color: var(#{color-connotation.$vvd-color-connotation-underemphasis});
 	}
