--- a/components/banner/src/vwc-banner.scss
+++ b/components/banner/src/vwc-banner.scss
@@ -9,6 +9,58 @@
 @include color-connotation.connotations-main-default(info);
 
 :host {@media screen and (prefers-reduced-motion: reduce) {
+		> div {
+
+			overflow: hidden;
+			max-height: 0;
+			transition: none;
+
+			> header {
+				@include typography.typography-cat-shorthand('body-2-bold');
+				position: relative;
+				display: flex;
+				overflow: hidden;
+				box-sizing: border-box;
+				align-items: center;
+				justify-content: center;
+				padding: 16px 54px 16px 16px;
+				background-color: var(#{color-connotation.$vvd-color-connotation});
+				color: var(#{color-connotation.$vvd-color-on-connotation});
+				font-size: 14px;
+				font-style: normal;
+				font-weight: 600;
+				line-height: 20px;
+
+				> slot {
+					align-items: center;
+				}
+
+				> vwc-icon {
+					flex: 0 0 24px;
+					align-self: flex-start;
+					margin-top: 3px;
+					margin-right: 10px;
+					text-align: left;
+				}
+
+				> vwc-icon-button {
+					--vvd-icon-button-color: inherit;
+					position: absolute;
+					top: 50%;
+					right: 16px;
+					flex: 0 0 140px;
+					transform: translateY(-50%);
+				}
+			}
+		}
+	}
+
+	> div {
+
+		overflow: hidden;
+		max-height: 0;
+		transition: max-height 0.2s;
+
 		> header {
 			@include typography.typography-cat-shorthand('body-2-bold');
 			position: relative;
@@ -24,18 +76,15 @@
 			font-style: normal;
 			font-weight: 600;
 			line-height: 20px;
-			opacity: 0;
-			transform: translateY(-100%);
-			transition: none;
 
 			> slot {
-				display: flex;
 				align-items: center;
 			}
 
 			> vwc-icon {
 				flex: 0 0 24px;
 				align-self: flex-start;
+				margin-top: 3px;
 				margin-right: 10px;
 				text-align: left;
 			}
@@ -50,59 +99,16 @@
 			}
 		}
 	}
-
-	> header {
-		@include typography.typography-cat-shorthand('body-2-bold');
-		position: relative;
-		display: flex;
-		overflow: hidden;
-		box-sizing: border-box;
-		align-items: center;
-		justify-content: center;
-		padding: 16px 54px 16px 16px;
-		background-color: var(#{color-connotation.$vvd-color-connotation});
-		color: var(#{color-connotation.$vvd-color-on-connotation});
-		font-size: 14px;
-		font-style: normal;
-		font-weight: 600;
-		line-height: 20px;
-		opacity: 0;
-		transform: translateY(-100%);
-		transition: transform 0.2s, opacity 0.2s;
-
-		> slot {
-			display: flex;
-			align-items: center;
-		}
-
-		> vwc-icon {
-			flex: 0 0 24px;
-			align-self: flex-start;
-			margin-right: 10px;
-			text-align: left;
-		}
-
-		> vwc-icon-button {
-			--vvd-icon-button-color: inherit;
-			position: absolute;
-			top: 50%;
-			right: 16px;
-			flex: 0 0 140px;
-			transform: translateY(-50%);
-		}
-	}
 }
-/*
-::slotted(*) {
-	display: inline-block;
-	vertical-align: middle;
-}*/
 
 :host([open]) {
-	> header {
-		opacity: 1;
-		transform: translateY(0);
+	> div {
+		max-height: 10rem;
 	}
+}
+
+::slotted(vwc-button) {
+	margin-inline: 1rem;
 }
 
 
