--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -27,10 +27,6 @@
 
 .expansion-panel {
 	border-bottom: 1px solid var(#{scheme-variables.$vvd-color-neutral-30});
-
-	&:hover {
-		background-color: var(#{scheme-variables.$vvd-color-neutral-20});
-	}
 }
 
 .expansion-panel-header {
@@ -39,6 +35,14 @@
 	align-items: center;
 	padding: 12px 16px;
 	cursor: pointer;
+
+	&:hover {
+		background-color: var(#{scheme-variables.$vvd-color-neutral-10});
+	}
+
+	&:active {
+		background-color: var(#{scheme-variables.$vvd-color-neutral-20});
+	}
 
 	.leading-icon,
 	.trailing-icon {
@@ -64,11 +68,11 @@
 
 .expansion-panel-body {
 	@include typography.typography-cat-shorthand('body-2');
-	padding: 0 16px 24px 56px;
+	padding: 12px 16px 24px 56px;
 }
 
 :host([icon=''][trailingToggle]) {
 	.expansion-panel-body {
-		padding: 0 16px 24px;
+		padding: 12px 16px 24px;
 	}
 }
