--- a/components/toggle-button-group/src/vwc-toggle-button-group.scss
+++ b/components/toggle-button-group/src/vwc-toggle-button-group.scss
@@ -9,11 +9,6 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 @use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with(
 	$variable-name: #{$vvd-toggle-button-group-shape}
 );
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation/variables' as connotation-variables;
-@use '@vonage/vvd-foundation/scss/mixins/color-connotation' with (
-	$connotations-set: primary,
-	$selector: '::slotted(:is(#{$toggle-buttons-type-selectors})#{connotation-variables.$compound-placeholder})'
-);
 
 @include shape-mixins.shape(
 	$shapes: (
@@ -22,34 +17,42 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 	)
 );
 
-@include color-connotation.connotations-shades;
-@include color-connotation.connotations-shades-default(primary);
-
 :host {
 	display: flex;
 }
 
 ::slotted([group-button]) {
-	--mdc-theme-primary: var(#{color-connotation.$vvd-color-connotation-soft});
 	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-base});
 	--mdc-ripple-color: var(#{scheme-variables.$vvd-color-on-base});
 	--mdc-ripple-focus-opacity: 0;
 }
 
+// TODO::remove these when viv-485 is complete
+::slotted([group-button]) {
+	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
+}
+
 ::slotted([group-button][selected]) {
-	//! TODO: remove next line on viv-485 resolve
-	--mdc-theme-primary: var(#{color-connotation.$vvd-color-connotation-underemphasis});
+	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
+}
+
+::slotted([group-button]:hover) {
+	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-40});
 }
 
 @each $scope in $scopes {
 	::slotted(vwc-#{$scope}) {
-		--vvd-#{$scope}-background-color: var(#{color-connotation.$vvd-color-connotation-soft});
+		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-30});
 		--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-on-base});
 		--vvd-#{$scope}-shape: var(#{$vvd-toggle-button-group-shape});
 	}
 
 	::slotted(vwc-#{$scope}[selected]) {
-		--vvd-#{$scope}-background-color: var(#{color-connotation.$vvd-color-connotation-underemphasis});
+		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-50});
+	}
+
+	::slotted(vwc-#{$scope}:hover) {
+		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-40});
 	}
 
 	::slotted(vwc-#{$scope}:not(:first-child):not(:last-child)) {
