--- a/components/toggle-button-group/src/vwc-toggle-button-group.scss
+++ b/components/toggle-button-group/src/vwc-toggle-button-group.scss
@@ -40,6 +40,13 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-40});
 }
 
+:host([disabled]) ::slotted([group-button]) {
+	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
+	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-neutral-50});
+	pointer-events: none;
+}
+// End of viv-485 removal
+
 @each $scope in $scopes {
 	::slotted(vwc-#{$scope}) {
 		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-30});
@@ -65,5 +72,11 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 
 	::slotted(vwc-#{$scope}:last-child:not(:first-child)) {
 		--vvd-#{$scope}-shape: 0 var(#{$vvd-toggle-button-group-shape}) var(#{$vvd-toggle-button-group-shape}) 0;
+	}
+
+	:host([disabled]) ::slotted([group-button]) {
+		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-30});
+		--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-neutral-50});
+		pointer-events: none;
 	}
 }
