Synced selection mode colors

--- a/components/toggle-button-group/src/vwc-toggle-button-group.scss
+++ b/components/toggle-button-group/src/vwc-toggle-button-group.scss
@@ -6,9 +6,11 @@ $scopes: button icon-button;
 $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $separator: comma));
 
 @use '@vonage/vvd-design-tokens/build/scss/semantic-variables/scheme-variables' as scheme-variables;
-@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins with(
-	$variable-name: #{$vvd-toggle-button-group-shape}
-);
+@use '@vonage/vvd-foundation/scss/mixins/shape-mixins' as shape-mixins
+	with
+	(
+	$variable-name: #{$vvd-toggle-button-group-shape})
+;
 
 @include shape-mixins.shape(
 	$shapes: (
@@ -28,14 +30,17 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 }
 
 // TODO::remove these when viv-485 is complete
-:host([accent]) ::slotted([group-button][selected]) {
-	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-primary});
-	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-primary});
+:host([accent]) {
+	::slotted([group-button][selected]) {
+		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-primary});
+		--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-on-primary});
+	}
+
+	::slotted([group-button]:hover:not([selected])) {
+		--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
+	}
 }
 
-:host([accent]) ::slotted([group-button]:hover) {
-	--mdc-theme-primary: var(#{scheme-variables-neutral-50});
-}
 
 ::slotted(vwc-button) {
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-30});
@@ -45,7 +50,7 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-50});
 }
 
-::slotted([group-button]:hover) {
+::slotted([group-button]:hover:not([selected])) {
 	--mdc-theme-primary: var(#{scheme-variables.$vvd-color-neutral-40});
 }
 
@@ -54,6 +59,7 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 	--mdc-theme-on-primary: var(#{scheme-variables.$vvd-color-neutral-50});
 	pointer-events: none;
 }
+
 // End of viv-485 removal
 
 @each $scope in $scopes {
@@ -67,19 +73,22 @@ $toggle-buttons-type-selectors: selector.append('vwc-', list.join($scopes, '', $
 		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-50});
 	}
 
-	:host([accent]) ::slotted([group-button][selected]) {
-		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-primary});
-		--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-on-primary});
-		background-color: var(#{scheme-variables.$vvd-color-neutral-30});
+	:host([accent]) {
+		::slotted(vwc-#{$scope}[selected]) {
+			--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-primary});
+			--vvd-#{$scope}-color: var(#{scheme-variables.$vvd-color-on-primary});
+			background-color: var(#{scheme-variables.$vvd-color-neutral-30});
+		}
+
+		::slotted(vwc-#{$scope}:hover:not([selected])) {
+			--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-50});
+		}
 	}
 
-	::slotted(vwc-#{$scope}:hover) {
+	::slotted(vwc-#{$scope}:hover:not([selected])) {
 		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-40});
 	}
 
-	:host([accent]) ::slotted(vwc-#{$scope}:hover) {
-		--vvd-#{$scope}-background-color: var(#{scheme-variables.$vvd-color-neutral-50});
-	}
 
 	::slotted(vwc-#{$scope}:not(:first-child):not(:last-child)) {
 		--vvd-#{$scope}-shape: 0;
