--- a/components/select/src/vwc-select.scss
+++ b/components/select/src/vwc-select.scss
@@ -110,6 +110,7 @@ $vvd-select-size-block: --vvd-select-size-block;
 
 	.mdc-select {
 		.mdc-floating-label {
+			--mdc-select-label-ink-color: var(--mdc-select-ink-color);
 			top: -24px;
 			left: -12px;
 			transform: none;
